--- a/packages/cli-plugin/package.json
+++ b/packages/cli-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/cli-plugin",
-  "version": "0.0.20-0",
+  "version": "0.1.0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
@@ -13,6 +13,5 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "devDependencies": {}
+  }
 }
