--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/core",
-  "version": "0.0.20-0",
+  "version": "0.1.0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
@@ -12,13 +12,12 @@
     "@proof-ui/logger": "link:../logger",
     "@proof-ui/test": "link:../test",
     "@types/tapable": "^1.0.5",
+    "fast-glob": "^3.2.2",
     "promise-pool-executor": "^1.1.1",
-    "tapable": "^1.1.3",
-    "fast-glob": "^3.2.2"
+    "tapable": "^1.1.3"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "devDependencies": {}
+  }
 }
