--- a/plugins/junit/package.json
+++ b/plugins/junit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proof-ui/junit-plugin",
-  "version": "0.0.20-0",
+  "version": "0.1.0",
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
