--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,9 @@ jobs:
       - run:
           name: 'Test'
           command: yarn test
+      - run:
+          name: 'Integration Tests'
+          command: cd examples/react && yarn test
 
   docs:
     <<: *defaults
