--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }
   },
   "devDependencies": {
+    "@auto-it/all-contributors": "9.54.0",
     "@design-systems/eslint-config": "1.4.8",
     "@types/jest": "25.1.4",
     "@typescript-eslint/parser": "2.25.0",
