chore: added integration test stage to CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
           name: Start Selenium
           command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
           background: true
+      - run: sleep 25
       - run:
           name: 'Integration Tests'
           command: cd examples/react && yarn test
