--- a/plugins/image-snapshot/package.json
+++ b/plugins/image-snapshot/package.json
@@ -12,7 +12,7 @@
     "jest-image-snapshot": "^4.2.0",
     "jest-snapshot": "^26.6.0",
     "lodash": "^4.17.20",
-    "sharp": "^0.26.2"
+    "webdriverio": "6.10.10"
   },
   "peerDependencies": {
     "@proof-ui/browser": "*",
@@ -24,7 +24,7 @@
     "@proof-ui/core": "link:../../packages/core",
     "@types/jest-image-snapshot": "4.1.2",
     "@types/lodash": "4.14.164",
-    "@types/sharp": "0.26.0"
+    "@types/tmp": "0.2.0"
   },
   "publishConfig": {
     "access": "public",
