--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,8 @@ jobs:
       - run:
           name: Avoid hosts unknown for github
           command: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+      - run: git config user.email "adam@dierkens.com"
+      - run: git config user.name "Adam Dierkens"
       - run:
           name: deploy
           command: yarn lerna run deploy --scope @proof-ui/docs --stream
