--- a/package.json
+++ b/package.json
@@ -40,24 +40,25 @@
     }
   },
   "devDependencies": {
-    "@design-systems/eslint-config": "1.4.8",
-    "@types/jest": "25.1.4",
-    "@typescript-eslint/parser": "2.25.0",
+    "@design-systems/eslint-config": "4.15.1",
+    "@types/jest": "28.1.3",
+    "@typescript-eslint/parser": "5.31.0",
     "auto": "10.27.1",
-    "eslint-plugin-no-explicit-type-exports": "0.10.11",
+    "eslint-plugin-no-explicit-type-exports": "0.12.1",
     "husky": "4.2.3",
-    "jest": "25.2.3",
-    "jest-junit": "10.0.0",
+    "jest": "28.1.3",
+    "jest-junit": "14.0.0",
     "lerna": "^3.20.2",
-    "lint-staged": "10.0.9",
+    "lint-staged": "13.0.3",
     "prettier": "2.0.2",
-    "ts-jest": "25.2.1",
-    "typescript": "3.8.3"
+    "ts-jest": "28.0.7",
+    "typescript": "4.7.4"
   },
   "prettier": {
     "singleQuote": true
   },
   "dependencies": {
-    "@types/got": "9.6.9"
+    "@types/got": "9.6.9",
+    "@wdio/types": "7.20.7"
   }
 }
