--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -19,10 +19,10 @@
     "@types/url-parse": "1.4.3",
     "chalk": "^3.0.0",
     "progress": "^2.0.3",
-    "selenium-standalone": "^6.17.0",
+    "selenium-standalone": "8.2.0",
     "tapable": "^1.1.3",
     "url-join": "4.0.1",
     "url-parse": "1.4.7",
-    "webdriverio": "6.1.22"
+    "webdriverio": "7.20.7"
   }
 }
