--- a/plugins/applitools/package.json
+++ b/plugins/applitools/package.json
@@ -8,9 +8,7 @@
     "build:watch": "npm run build -- -w"
   },
   "dependencies": {
-    "@applitools/eyes-selenium": "4.44.0",
-    "@applitools/eyes-webdriverio": "5.21.0",
-    "selenium-webdriver": "4.0.0-alpha.7"
+    "@applitools/eyes-webdriverio": "5.35.7"
   },
   "peerDependencies": {
     "@proof-ui/cli-plugin": "*",
