--- a/plugins/image-snapshot/package.json
+++ b/plugins/image-snapshot/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@babel/traverse": "^7.12.1",
-    "jest-image-snapshot": "^4.2.0",
-    "jest-snapshot": "^26.6.0",
+    "jest-image-snapshot": "5.1.0",
+    "jest-snapshot": "28.1.3",
     "lodash": "^4.17.20",
-    "webdriverio": "6.10.10"
+    "webdriverio": "7.20.7"
   },
   "peerDependencies": {
     "@proof-ui/browser": "*",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@proof-ui/core": "link:../../packages/core",
-    "@types/jest-image-snapshot": "4.1.2",
+    "@types/jest-image-snapshot": "5.1.0",
     "@types/lodash": "4.14.164",
     "@types/tmp": "0.2.0"
   },
