--- a/plugins/junit/package.json
+++ b/plugins/junit/package.json
@@ -8,8 +8,8 @@
     "build:watch": "npm run build -- -w"
   },
   "dependencies": {
-    "junit-report-builder": "^1.3.3",
-    "xmlbuilder": "^15.1.0"
+    "junit-report-builder": "3.0.1",
+    "xmlbuilder": "15.1.1"
   },
   "peerDependencies": {
     "@proof-ui/cli-plugin": "*",
