--- a/plugins/image-snapshot/package.json
+++ b/plugins/image-snapshot/package.json
@@ -11,8 +11,7 @@
     "@babel/traverse": "^7.12.1",
     "jest-image-snapshot": "5.1.0",
     "jest-snapshot": "28.1.3",
-    "lodash": "^4.17.20",
-    "webdriverio": "7.20.7"
+    "lodash": "^4.17.20"
   },
   "peerDependencies": {
     "@proof-ui/browser": "*",
