--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,35 +96,8 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*/
-      - lint:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /.*/
-      - test:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /.*/
-      - docs:
-          requires:
-            - test
-            - lint
-          filters:
-            branches:
-              only:
-                - master
-      - release:
-          requires:
-            - test
-            - lint
-          filters:
-            branches:
-              only:
-                - master
+      - build
+      - lint
+      - test
+      - docs
+      - release
